# Discord-Games-Bot

./: .gitignore  Pipfile  README.md  S3.py  asked-questions.txt  main.py  punkty.txt  pyproject.toml  requirements.txt  soldiers.txt
amazons3/: S3.py
familiada/: classes.py  commands.py  main.py  resources.py
familiada/old-resources/: 00.py  01.py  02.py  11urodzinyTGS.py  mojeiuzury.py  nowe[uzur].py  nowenoweuzur.py  przyklad.py  znetaimoje.py
spying/: commands.py  resources.py
stats/: additionalIds.py  airRanks.py  commands.py  groundRanks.py  medals.py  notifyingData.py
utility/: commands.py  resources.py
zbiorki/: commands.py
